--- a/id-verification-system/id-verification-system.csproj
+++ b/id-verification-system/id-verification-system.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Course_View.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Course_View.Designer.cs">
+      <DependentUpon>Course_View.cs</DependentUpon>
+    </Compile>
     <Compile Include="Student_View.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,6 +103,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Course_View.resx">
+      <DependentUpon>Course_View.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Student_View.resx">
       <DependentUpon>Student_View.cs</DependentUpon>
     </EmbeddedResource>
