--- a/id-verification-system/id-verification-system.csproj
+++ b/id-verification-system/id-verification-system.csproj
@@ -53,6 +53,12 @@
     <Compile Include="Course_View.Designer.cs">
       <DependentUpon>Course_View.cs</DependentUpon>
     </Compile>
+    <Compile Include="sidebar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="sidebar.Designer.cs">
+      <DependentUpon>sidebar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Student_View.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,6 +111,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Course_View.resx">
       <DependentUpon>Course_View.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sidebar.resx">
+      <DependentUpon>sidebar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Student_View.resx">
       <DependentUpon>Student_View.cs</DependentUpon>
