--- a/id-verification-system/id-verification-system.csproj
+++ b/id-verification-system/id-verification-system.csproj
@@ -47,6 +47,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Edit_Course.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Edit_Course.Designer.cs">
+      <DependentUpon>Edit_Course.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Add_Course.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_Course.Designer.cs">
+      <DependentUpon>Add_Course.cs</DependentUpon>
+    </Compile>
     <Compile Include="Course_View.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +121,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Edit_Course.resx">
+      <DependentUpon>Edit_Course.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add_Course.resx">
+      <DependentUpon>Add_Course.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Course_View.resx">
       <DependentUpon>Course_View.cs</DependentUpon>
     </EmbeddedResource>
