--- a/id-verification-system/id-verification-system.csproj
+++ b/id-verification-system/id-verification-system.csproj
@@ -47,6 +47,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Edit_Student.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Edit_Student.Designer.cs">
+      <DependentUpon>Edit_Student.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Enroll_Student.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Enroll_Student.Designer.cs">
+      <DependentUpon>Enroll_Student.cs</DependentUpon>
+    </Compile>
     <Compile Include="Edit_Course.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,6 +133,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Edit_Student.resx">
+      <DependentUpon>Edit_Student.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Enroll_Student.resx">
+      <DependentUpon>Enroll_Student.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Edit_Course.resx">
       <DependentUpon>Edit_Course.cs</DependentUpon>
     </EmbeddedResource>
