--- a/id-verification-system/id-verification-system.csproj
+++ b/id-verification-system/id-verification-system.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CourseUtils.cs" />
     <Compile Include="Edit_Course.cs">
       <SubType>Form</SubType>
     </Compile>
